# finops-rag-agent

./: .env.encrypted  .gitignore  README.md  decrypt.sh  encrypt.sh  env_crypto.py  finops-ai-agent.pptx  pyproject.toml  run_ui.sh
app/: __init__.py
documentation/: AGENT_DETAILS.md  ARCHITECTURE.md  PROJECT_SUMMARY.md  finops-ai-agent.pptx
src/: __init__.py  run_etl.py
src/agent/: __init__.py
src/agent/docs_agent/: README.md  __init__.py  analyze_web_structure.py  doc_urls.py  graph.py  ingest.py  retriever.py  web_scraper.py
src/agent/general_agent/: __init__.py  graph.py
src/agent/router/: __init__.py  graph.py  intent_router.py
src/agent/sql_agent/: __init__.py  executor.py  graph.py  nl2sql.py  schema_provider.py  summary.py
src/chat/: README.md  __init__.py  ask.py  formatter.py  nl2sql.py  summary.py
src/core/: __init__.py  config.py  contracts.py
src/etl/: README.md  __init__.py  clean.py  extract.py  runner.py  store.py  transform.py
src/rag/: __init__.py
src/test/: README.md  __init__.py  debug_chroma.py  debug_llm.py  debug_scores.py  output.txt  test_chat.py  test_chroma.py  test_docs_agent.py  test_intent_router.py  test_retriever.py  test_ui.py
src/ui/: __init__.py  app.py
src/ui/components/: chat_message.py  citations.py  metrics.py
src/ui/utils/: session.py
src/utils/: __init__.py  lock.py  logging.py
