[project]
name = "finops-rag-agent"
version = "0.1.0"
description = "FinOps RAG Agent for cloud cost optimization"
authors = [
    {name = "wynter", email = "wynter.lee@sktelecom.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "openai>=1.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "boto3>=1.34.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "google-cloud-billing>=1.11.0",
    "cryptography>=41.0.0",
    # ETL 파이프라인 의존성
    "redshift-connector>=2.0.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "tqdm>=4.66.0",
    "python-dateutil>=2.9.0.post0",
    "langchain-community>=0.3.29",
    "langgraph>=0.2.0",
    "beautifulsoup4>=4.13.5",
    "ftfy>=6.3.1",
    "lxml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
